Update CP2077 support
Updated the Cyberpunk 2077 support to the new "mod" folder path.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -15,273 +15,277 @@
 	</system.net>
 	<applicationSettings>
 		<Nexus.Client.Properties.Settings>
-			<setting name="ModManagerUrl" serializeAs="String">
-				<value>https://www.nexusmods.com/content/modmanager/</value>
-			</setting>
-			<setting name="HelpLinks" serializeAs="Xml">
-				<value>
-					<KeyedSettingsOfString>
-						<item key="Support and Feedback (Official NMM Discord)">
-							<string>https://discord.gg/JZ4tZ5KFQX</string>
-						</item>
-						<item key="Beta Wiki">
-							<string>https://wiki.nexusmods.com/index.php/Category:NMM</string>
-						</item>
-						<item key="Report a Bug">
-							<string>https://github.com/Nexus-Mods/Nexus-Mod-Manager/issues</string>
-						</item>
-					</KeyedSettingsOfString>
-				</value>
-			</setting>
-		</Nexus.Client.Properties.Settings>
+   <setting name="ModManagerUrl" serializeAs="String">
+    <value>https://www.nexusmods.com/content/modmanager/</value>
+   </setting>
+   <setting name="HelpLinks" serializeAs="Xml">
+    <value>
+     <KeyedSettingsOfString>
+      <item key="Support and Feedback (Official NMM Discord)">
+       <string>https://discord.gg/JZ4tZ5KFQX</string>
+      </item>
+      <item key="Beta Wiki">
+       <string>https://wiki.nexusmods.com/index.php/Category:NMM</string>
+      </item>
+      <item key="Report a Bug">
+       <string>https://github.com/Nexus-Mods/Nexus-Mod-Manager/issues</string>
+      </item>
+     </KeyedSettingsOfString>
+    </value>
+   </setting>
+  </Nexus.Client.Properties.Settings>
 	</applicationSettings>
 	<userSettings>
 		<Nexus.Client.Properties.Settings>
-			<setting name="SettingsUpgraded" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="InstalledGamesDetected" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="CacheOverhaulSetup" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="RememberedGameMode" serializeAs="String">
-				<value />
-			</setting>
-			<setting name="ModCompressionLevel" serializeAs="String">
-				<value>Ultra</value>
-			</setting>
-			<setting name="ModCompressionFormat" serializeAs="String">
-				<value>SevenZip</value>
-			</setting>
-			<setting name="SelectedAddModCommandIndex" serializeAs="String">
-				<value>0</value>
-			</setting>
-			<setting name="CheckForNewModVersions" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="AddMissingInfoToMods" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="CloseModManagerAfterGameLaunch" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="CloseModManagerAfterGameLaunchIsRemembered" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="RememberGameMode" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="ScanSubfoldersForMods" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="CheckForUpdatesOnStartup" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="UserLocation" serializeAs="String">
-				<value>default</value>
-			</setting>
-			<setting name="UseMultithreadedDownloads" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="UpdateCheckInterval" serializeAs="String">
-				<value>3</value>
-			</setting>
-			<setting name="LastUpdateCheckDate" serializeAs="String">
-				<value />
-			</setting>
-			<setting name="ModVersionsCheckInterval" serializeAs="String">
-				<value>3</value>
-			</setting>
-			<setting name="MaxConcurrentDownloads" serializeAs="String">
-				<value>5</value>
-			</setting>
-			<setting name="LastModVersionsCheckDate" serializeAs="String">
-				<value />
-			</setting>
-			<setting name="TempPathFolder" serializeAs="String">
-				<value />
-			</setting>
-			<setting name="TraceLogFolder" serializeAs="String">
-				<value />
-			</setting>
-			<setting name="ShowExpandedCategories" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="ShowEmptyCategory" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="HideModUpdateWarningIcon" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="SkipReadmeFiles" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="ShowSidePanel" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="CategoryViewDefaultSortOrder" serializeAs="String">
-				<value>1</value>
-			</setting>
-			<setting name="CategoryViewDefaultSortColumn" serializeAs="String">
-				<value>0</value>
-			</setting>
-			<setting name="UseCategoryView" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="OfflineMode" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="SupportOfflineMode" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="ShowStartupMessage" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="CheckForTipsOnStartup" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="ForceHardLinks" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="ShowAlphaDisclaimer" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="LastCheckedMissingDownloadID" serializeAs="String">
-				<value />
-			</setting>
-			<setting name="ShowFallout4UpgradeDisclaimer" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="OverrideLocalModNames" serializeAs="String">
-				<value>True</value>
-			</setting>
-			<setting name="SkyrimSEFirstInstallWarning" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="ApiKey" serializeAs="String">
-				<value />
-			</setting>
-			<setting name="AssociateWithUrl" serializeAs="String">
-				<value>False</value>
-			</setting>
-			<setting name="ExecutablePaths" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="InstallationPaths" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="CompletedSetup" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfBoolean />
-				</value>
-			</setting>
-			<setting name="ModFolder" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="CustomGameModeSettings" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfPerGameModeSettingsOfObject />
-				</value>
-			</setting>
-			<setting name="InstallInfoFolder" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="DockPanelLayouts" serializeAs="Xml">
-				<value>
-					<KeyedSettingsOfString />
-				</value>
-			</setting>
-			<setting name="CustomLaunchCommands" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="CustomLaunchCommandArguments" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="SelectedLaunchCommands" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="RepositoryUsernames" serializeAs="Xml">
-				<value>
-					<KeyedSettingsOfString />
-				</value>
-			</setting>
-			<setting name="RepositoryAuthenticationTokens" serializeAs="Xml">
-				<value>
-					<KeyedSettingsOfKeyedSettingsOfString />
-				</value>
-			</setting>
-			<setting name="DelayedSettings" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfKeyedSettingsOfString />
-				</value>
-			</setting>
-			<setting name="InstalledGames" serializeAs="Xml">
-				<value>
-					<ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
-				</value>
-			</setting>
-			<setting name="QueuedModsToAdd" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfKeyedSettingsOfAddModDescriptor />
-				</value>
-			</setting>
-			<setting name="WindowPositions" serializeAs="Xml">
-				<value>
-					<WindowPositions />
-				</value>
-			</setting>
-			<setting name="ColumnWidths" serializeAs="Xml">
-				<value>
-					<ColumnWidths />
-				</value>
-			</setting>
-			<setting name="SplitterSizes" serializeAs="Xml">
-				<value>
-					<SplitterSizes />
-				</value>
-			</setting>
-			<setting name="ToolFolder" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="SupportedTools" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfKeyedSettingsOfString />
-				</value>
-			</setting>
-			<setting name="VirtualFolder" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="HDLinkFolder" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfString />
-				</value>
-			</setting>
-			<setting name="MultiHDInstall" serializeAs="Xml">
-				<value>
-					<PerGameModeSettingsOfBoolean />
-				</value>
-			</setting>
-		</Nexus.Client.Properties.Settings>
+   <setting name="SettingsUpgraded" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="InstalledGamesDetected" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="CacheOverhaulSetup" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="RememberedGameMode" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="ModCompressionLevel" serializeAs="String">
+    <value>Ultra</value>
+   </setting>
+   <setting name="ModCompressionFormat" serializeAs="String">
+    <value>SevenZip</value>
+   </setting>
+   <setting name="SelectedAddModCommandIndex" serializeAs="String">
+    <value>0</value>
+   </setting>
+   <setting name="CheckForNewModVersions" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="AddMissingInfoToMods" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="CloseModManagerAfterGameLaunch" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="CloseModManagerAfterGameLaunchIsRemembered" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="RememberGameMode" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="ScanSubfoldersForMods" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="CheckForUpdatesOnStartup" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="UserLocation" serializeAs="String">
+    <value>default</value>
+   </setting>
+   <setting name="UseMultithreadedDownloads" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="UpdateCheckInterval" serializeAs="String">
+    <value>3</value>
+   </setting>
+   <setting name="LastUpdateCheckDate" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="ModVersionsCheckInterval" serializeAs="String">
+    <value>3</value>
+   </setting>
+   <setting name="MaxConcurrentDownloads" serializeAs="String">
+    <value>5</value>
+   </setting>
+   <setting name="LastModVersionsCheckDate" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="TempPathFolder" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="TraceLogFolder" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="ShowExpandedCategories" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="ShowEmptyCategory" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="HideModUpdateWarningIcon" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="SkipReadmeFiles" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="ShowSidePanel" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="CategoryViewDefaultSortOrder" serializeAs="String">
+    <value>1</value>
+   </setting>
+   <setting name="CategoryViewDefaultSortColumn" serializeAs="String">
+    <value>0</value>
+   </setting>
+   <setting name="UseCategoryView" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="OfflineMode" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="SupportOfflineMode" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="ShowStartupMessage" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="CheckForTipsOnStartup" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="ForceHardLinks" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="ShowAlphaDisclaimer" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="LastCheckedMissingDownloadID" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="ShowFallout4UpgradeDisclaimer" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="OverrideLocalModNames" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="SkyrimSEFirstInstallWarning" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="ApiKey" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="AssociateWithUrl" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="InstalledGames" serializeAs="Xml">
+    <value>
+     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+    </value>
+   </setting>
+   <setting name="QueuedModsToAdd" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfKeyedSettingsOfAddModDescriptor />
+    </value>
+   </setting>
+   <setting name="WindowPositions" serializeAs="Xml">
+    <value>
+     <WindowPositions />
+    </value>
+   </setting>
+   <setting name="ColumnWidths" serializeAs="Xml">
+    <value>
+     <ColumnWidths />
+    </value>
+   </setting>
+   <setting name="SplitterSizes" serializeAs="Xml">
+    <value>
+     <SplitterSizes />
+    </value>
+   </setting>
+   <setting name="ShowCP2077UpgradeDisclaimer" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="ExecutablePaths" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="InstallationPaths" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="CompletedSetup" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfBoolean />
+    </value>
+   </setting>
+   <setting name="ModFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="CustomGameModeSettings" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfPerGameModeSettingsOfObject />
+    </value>
+   </setting>
+   <setting name="InstallInfoFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="DockPanelLayouts" serializeAs="Xml">
+    <value>
+     <KeyedSettingsOfString />
+    </value>
+   </setting>
+   <setting name="CustomLaunchCommands" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="CustomLaunchCommandArguments" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="SelectedLaunchCommands" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="RepositoryUsernames" serializeAs="Xml">
+    <value>
+     <KeyedSettingsOfString />
+    </value>
+   </setting>
+   <setting name="RepositoryAuthenticationTokens" serializeAs="Xml">
+    <value>
+     <KeyedSettingsOfKeyedSettingsOfString />
+    </value>
+   </setting>
+   <setting name="DelayedSettings" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfKeyedSettingsOfString />
+    </value>
+   </setting>
+   <setting name="ToolFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="SupportedTools" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfKeyedSettingsOfString />
+    </value>
+   </setting>
+   <setting name="VirtualFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="HDLinkFolder" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfString />
+    </value>
+   </setting>
+   <setting name="MultiHDInstall" serializeAs="Xml">
+    <value>
+     <PerGameModeSettingsOfBoolean />
+    </value>
+   </setting>
+  </Nexus.Client.Properties.Settings>
 	</userSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
