Updated Pathoschild FluentClient
Updated the Pathoschild library to the latest release.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -168,8 +168,7 @@
    </setting>
    <setting name="InstalledGames" serializeAs="Xml">
     <value>
-     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+     <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
     </value>
    </setting>
    <setting name="QueuedModsToAdd" serializeAs="Xml">
