--- a/NexusClient.Interface/NexusClient.Interface.csproj
+++ b/NexusClient.Interface/NexusClient.Interface.csproj
@@ -143,6 +143,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
