--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -164,7 +164,7 @@
 				<value />
 			</setting>
 			<setting name="SkyrimSEDownloadOverride" serializeAs="String">
-				<value />
+				<value>SkyrimSE</value>
 			</setting>
 			<setting name="AssociateWithUrl" serializeAs="String">
 				<value>False</value>
