--- a/Game Modes/HogwartsLegacy/HogwartsLegacy.csproj
+++ b/Game Modes/HogwartsLegacy/HogwartsLegacy.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AC73C619-BACA-4229-8CF0-43188A3247FE}</ProjectGuid>
+    <ProjectGuid>{E38AC356-D5BF-4A1F-98D7-56E8B7041E0C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Nexus.Client.Games.BaldursGate3</RootNamespace>
-    <AssemblyName>BaldursGate3</AssemblyName>
+    <RootNamespace>Nexus.Client.Games.HogwartsLegacy</RootNamespace>
+    <AssemblyName>HogwartsLegacy</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -41,9 +41,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\Stage\packages\Newtonsoft.Json.13.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -52,7 +49,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
@@ -68,23 +64,23 @@
     <Compile Include="Settings\UI\GeneralSettingsPage.Designer.cs">
       <DependentUpon>GeneralSettingsPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tools\BaldursGate3ToolLauncher.cs" />
-    <Compile Include="BaldursGate3Launcher.cs" />
+    <Compile Include="Tools\HogwartsLegacyToolLauncher.cs" />
+    <Compile Include="HogwartsLegacyLauncher.cs" />
     <Compile Include="SetupForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="SetupForm.Designer.cs">
       <DependentUpon>SetupForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="BaldursGate3SetupVM.cs" />
-    <Compile Include="BaldursGate3GameModeFactory.cs" />
+    <Compile Include="HogwartsLegacySetupVM.cs" />
+    <Compile Include="HogwartsLegacyGameModeFactory.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="BaldursGate3GameModeDescriptor.cs" />
-    <Compile Include="BaldursGate3GameMode.cs" />
+    <Compile Include="HogwartsLegacyGameModeDescriptor.cs" />
+    <Compile Include="HogwartsLegacyGameMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,11 +128,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
     <None Include="Resources\Categories.xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\BaldursGate3_logo.ico" />
+    <None Include="Resources\HogwartsLegacy_logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
