--- a/Mod Formats/FOMod/packages.config
+++ b/Mod Formats/FOMod/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Squid-Box.SevenZipSharp" version="1.5.0.366" targetFramework="net46" />
+  <package id="Squid-Box.SevenZipSharp" version="1.6.1.23" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
 </packages>
