--- a/NexusClient/packages.config
+++ b/NexusClient/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net461" />
   <package id="Pathoschild.FluentNexus" version="1.0.5" targetFramework="net461" />
-  <package id="Pathoschild.Http.FluentClient" version="4.2.0" targetFramework="net461" />
-  <package id="Squid-Box.SevenZipSharp" version="1.5.0.366" targetFramework="net461" />
+  <package id="Pathoschild.Http.FluentClient" version="4.3.0" targetFramework="net461" />
+  <package id="Squid-Box.SevenZipSharp" version="1.6.1.23" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
 </packages>
